<resources>
    <string name="app_name">Inventory App</string>

    <string name="inventory">Inventory</string>

    <string name="quantity_abbreviation">Qty: </string>

    <string name="empty_text_view">Touch the "+" Button to add an item</string>

    <string name="sale">Sale</string>
    <string name="decrease_button_description">Decreases the quantity of an item</string>

    <string name="delete_all">Delete All Items</string>
    <string name="delete_all_warning">Delete entire database?</string>

    <string name="quantity_entry_negative">Quantity can\'t be less than 0</string>
    <string name="price_entry_negative">Price can\'t be less than 0</string>

    <!-- Label for overview category of attributes in the editor  -->
    <string name="category_overview">Overview</string>

    <!-- Item attributes -->
    <string name="hint_item_name">Product Name</string>
    <string name="hint_item_price">Price</string>
    <string name="hint_item_quantity">Quantity</string>
    <string name="hint_item_vendor">Vendor\'s Email Address</string>

    <!-- Label for editor menu option to save an item and leave editor  -->
    <string name="action_save">Save</string>
    <!-- Label for editor overflow menu option that deletes the current item  -->
    <string name="action_delete">Delete</string>

    <!-- Editor Activity Titles -->
    <string name="editor_activity_title_edit">Edit Item</string>
    <string name="editor_activity_title_add">Add Item</string>

    <!-- Editor Activity Toasts -->
    <string name="item_not_added">Error with database entry</string>
    <string name="item_added">Item Saved</string>
    <string name="editor_update_failed">Error with database update instructions</string>
    <string name="editor_update_success">Item Updated</string>
    <string name="editor_delete_successful">Item Deleted</string>
    <string name="editor_delete_failed">Error with deleting item</string>
    <string name="insert_vendor_invalid">Please enter the vendor\'s email.</string>
    <string name="item_intent_failed">Please enter the product\'s name.</string>
    <string name="vendor_intent_failed">Please save an email first.</string>
    <string name="insert_image_invalid">Please upload a picture.</string>

    <!-- Editor Activity Prompts -->
    <string name="delete_dialog_warning">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Editor Activity buttons-->
    <string name="contact_vendor">Email Vendor</string>
    <string name="upload_image">Upload Image</string>

    <!-- MerchandiseProvider -->
    <string name="cursor_query_error">Cannot perform that instruction</string>
    <string name="insert_failed">Failed to add the item</string>
    <string name="insert_query_invalid">Cannot insert that item</string>
    <string name="insert_name_invalid">Item needs a name</string>
    <string name="insert_quantity_invalid">Item needs a quantity</string>
    <string name="insert_price_invalid">Item needs a price</string>
    <string name="insert_price_negative">Price cannot be negative</string>
    <string name="insert_quantity_negative">Quantity cannot be negative</string>
    <string name="delete_failed">Error with delete instruction</string>
    <string name="vendor_entry_invalid">Please enter the vendor\'s email</string>
    <string name="mime_type_issue">Unable to apply instructions</string>

    <string name="test_toast">This is Your doing</string>
</resources>
