<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp"
    android:descendantFocusability="blocksDescendants">
    <!-- android:descendantFocusability="blocksDescendants" enables you to
        click ListView items while there are ImageButtons -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"
            tools:text="Product Name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/price_text_view"
                android:layout_weight="1"
                style="@style/supporting_information"
                tools:text="$25.32"/>

            <TextView
                android:text="@string/quantity_abbreviation"
                style="@style/supporting_information"
                />

            <TextView
                android:id="@+id/quantity_text_view"
                tools:text=" 20"
                style="@style/supporting_information"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0">

        <Button
            android:id="@+id/quantity_decrease_button"
            android:text="@string/sale"
            android:contentDescription="@string/decrease_button_description"
            style="@style/button_style" />

    </LinearLayout>

</LinearLayout>